# golden-robot-retriever

./: .gitignore  LICENSE  README.md  client.py  client_act.py  client_act_v2.py  main.py  openai_interface.py  pyproject.toml  readme.md  serve_act.py  server.py  voice_interface.py
golden_robot_retriever/: __init__.py  cameras.py  openai_interface.py
golden_robot_retriever/robot_code/: client.py  server.py
misc/: make_cartoon.py
tests/: test_cameras.py
