[project]
name = "golden-robot-retriever"
version = "0.1.0"
description = ""
authors = [
    {name = "Dominique Paul",email = "dominique.c.a.paul@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "scipy (>=1.15.3,<2.0.0)",
    "sounddevice (>=0.5.1,<0.6.0)",
    "webrtcvad (>=2.0.10,<3.0.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "isort (>=6.0.1,<7.0.0)",
    "ruff (>=0.11.9,<0.12.0)",
    "openai (>=1.78.0,<2.0.0)",
    "art (>=6.5,<7.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
